--- a/package.json
+++ b/package.json
@@ -10,6 +10,9 @@
   },
   "dependencies": {
     "@react-native-picker/picker": "2.11.0",
+    "@react-navigation/bottom-tabs": "^7.3.15",
+    "@react-navigation/native": "^7.1.10",
+    "@react-navigation/native-stack": "^7.3.14",
     "expo": "~53.0.9",
     "expo-linear-gradient": "~14.1.4",
     "expo-status-bar": "~2.2.3",
@@ -18,7 +21,7 @@
     "react-native-gesture-handler": "^2.25.0",
     "react-native-modal": "^14.0.0-rc.1",
     "react-native-safe-area-context": "5.4.0",
-    "react-native-screens": "~4.10.0",
+    "react-native-screens": "~4.11.1",
     "react-native-svg": "^15.11.2"
   },
   "devDependencies": {
