--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "react-native": "0.79.3",
     "react-native-confetti-cannon": "^1.5.2",
     "react-native-deck-swiper": "^1.1.7",
+    "react-native-draggable-flatlist": "^4.0.3",
     "react-native-gesture-handler": "~2.24.0",
     "react-native-modal": "^14.0.0-rc.1",
     "react-native-paper": "^5.14.5",
