--- a/package.json
+++ b/package.json
@@ -3,7 +3,9 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "start": "expo start --dev-client",
+    "start": "expo start --dev-client --clear",
+    "start:clean": "expo start --dev-client --clear",
+    "start:fast": "expo start --dev-client",
     "android": "expo run:android",
     "ios": "expo run:ios",
     "web": "expo start --web"
@@ -17,6 +19,7 @@
     "@react-navigation/native-stack": "^7.3.14",
     "expo": "~53.0.9",
     "expo-av": "^15.1.6",
+    "expo-dev-client": "~5.2.1",
     "expo-linear-gradient": "~14.1.4",
     "expo-secure-store": "~14.2.3",
     "expo-status-bar": "~2.2.3",
@@ -33,8 +36,7 @@
     "react-native-safe-area-context": "5.4.0",
     "react-native-screens": "~4.11.1",
     "react-native-svg": "15.11.2",
-    "react-native-vector-icons": "^10.2.0",
-    "expo-dev-client": "~5.2.1"
+    "react-native-vector-icons": "^10.2.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
