--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "react": "19.0.0",
     "react-native": "0.79.4",
     "react-native-confetti-cannon": "^1.5.2",
+    "react-native-countdown-circle-timer": "^3.2.1",
     "react-native-deck-swiper": "^1.1.7",
     "react-native-draggable-flatlist": "^4.0.3",
     "react-native-gesture-handler": "~2.24.0",
@@ -35,7 +36,7 @@
     "react-native-reanimated": "~3.17.4",
     "react-native-safe-area-context": "5.4.0",
     "react-native-screens": "~4.11.1",
-    "react-native-svg": "15.11.2",
+    "react-native-svg": "^15.11.2",
     "react-native-vector-icons": "^10.2.0"
   },
   "devDependencies": {
