--- a/package.json
+++ b/package.json
@@ -20,8 +20,10 @@
     "expo": "~53.0.9",
     "expo-av": "^15.1.6",
     "expo-dev-client": "~5.2.1",
+    "expo-file-system": "~18.1.11",
     "expo-linear-gradient": "~14.1.4",
     "expo-secure-store": "~14.2.3",
+    "expo-sharing": "~13.1.5",
     "expo-status-bar": "~2.2.3",
     "lodash": "^4.17.21",
     "react": "19.0.0",
@@ -37,7 +39,8 @@
     "react-native-safe-area-context": "5.4.0",
     "react-native-screens": "~4.11.1",
     "react-native-svg": "^15.11.2",
-    "react-native-vector-icons": "^10.2.0"
+    "react-native-vector-icons": "^10.2.0",
+    "xlsx": "^0.18.5"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
